Complete execution of the system with changes in ForwardSecureANNSystem.java