@@ -1,5 +1,6 @@
 package com.fspann;
 
+import com.fspann.config.SystemConfig;
 import com.fspann.data.DataLoader;
 import com.fspann.encryption.EncryptionUtils;
 import com.fspann.evaluation.EvaluationEngine;
@@ -7,6 +8,7 @@ import com.fspann.index.EvenLSH;
 import com.fspann.index.SecureLSHIndex;
 import com.fspann.keymanagement.KeyManager;
 import com.fspann.keymanagement.KeyVersionManager;
+import com.fspann.keymanagement.ReEncryptor;
 import com.fspann.query.EncryptedPoint;
 import com.fspann.query.QueryGenerator;
 import com.fspann.query.QueryProcessor;
@@ -43,12 +45,14 @@ public class ForwardSecureANNSystem {
     private List<double[]> queryVectors;
     private final MetadataManager metadataManager;
     private final ANN ann;
+    private final ReEncryptor reEncryptor;
+    private final Thread reEncryptThread;
 
     private long totalInsertTimeMs = 0;
     private int totalRehashes = 0;
     private int totalFakePoints = 0;
 
-    public ForwardSecureANNSystem(String basePath, String queryPath, String groundTruthPath,
+    public  ForwardSecureANNSystem(String basePath, String queryPath, String groundTruthPath,
                                   int numHashTables, int numIntervals,
                                   int maxBucketSize, int targetBucketSize, boolean useFakePoints, boolean useForwardSecurity) throws IOException {
 
@@ -60,46 +64,44 @@ public class ForwardSecureANNSystem {
         this.profiler = new Profiler();
         this.metadataManager = new MetadataManager(keyManager);
 
+        // Load datasets
         logger.info("[STEP] 📥 Loading Datasets...");
         DataLoader dataLoader = new DataLoader();
         baseVectors = dataLoader.loadData(basePath, 1000);
         queryVectors = dataLoader.loadData(queryPath, 1000);
         groundTruth = dataLoader.loadGroundTruth(groundTruthPath, 1000);
-
         logger.info("Base Vectors Size: {}", baseVectors.size());
         logger.info("Query Vectors Size: {}", queryVectors.size());
         logger.info("Ground Truth Size: {}", groundTruth.size());
-
         logger.info("[STEP] ✅ Dataset loading complete.");
 
         EvenLSH initialLsh = new EvenLSH(baseVectors.get(0).length, numIntervals);
-        this.index = new SecureLSHIndex(numHashTables, keyManager.getCurrentKey(), baseVectors);        QueryGenerator queryGenerator = new QueryGenerator(initialLsh, keyManager);
+        this.index = new SecureLSHIndex(numHashTables, keyManager.getCurrentKey(), baseVectors);
+        QueryGenerator queryGenerator = new QueryGenerator(initialLsh, keyManager);
         this.queryProcessor = new QueryProcessor(new HashMap<>(), keyManager, 1000);
 
-        logger.info("Query vectors size before sample query: {}", queryVectors.size());
-        ann = new ANN(baseVectors.get(0).length, numIntervals, keyManager);  // Initialize the ANN index
+        // Initialize ANN
+        logger.info("Initializing ANN index...");
+        ann = new ANN(baseVectors.get(0).length, numIntervals, keyManager);
         ann.buildIndex(baseVectors);  // Build the index with the base data
-    }
+        this.reEncryptor = new ReEncryptor(index, keyManager);
+        this.reEncryptThread = new Thread(reEncryptor, "ReEncryptor");
+        reEncryptThread.setDaemon(true);
+        reEncryptThread.start();
 
-    // Added getter to resolve 'getQueryVectors' error
-    public List<double[]> getQueryVectors() {
-        return queryVectors;
-    }
-
-    public ANN getANN() {
-        return ann;
     }
 
     public List<double[]> query(double[] queryVector, int topK) throws Exception {
-
+        logger.info("[STEP] 📤 Querying with vector: {}", Arrays.toString(queryVector));
         SecretKey currentKey = keyManager.getCurrentKey();
         if (currentKey == null) {
             logger.error("Failed to get the current session key. KeyManager might not be initialized correctly.");
             throw new IllegalStateException("Current session key is null");
         }
 
-        EvenLSH lsh = new EvenLSH(baseVectors.get(0).length, 1000);  // Initialize LSH
+        EvenLSH lsh = new EvenLSH(baseVectors.get(0).length, 1000);
         QueryToken queryToken = QueryGenerator.generateQueryToken(queryVector, topK, 1, lsh, keyManager);
+        logger.info("[STEP] 📦 Generated query token: {}", queryToken);
 
         List<EncryptedPoint> result = queryCache.get(queryToken);
         if (result != null) {
@@ -107,22 +109,36 @@ public class ForwardSecureANNSystem {
             return decryptEncryptedPoints(result);
         }
 
-        result = queryProcessor.processQuery(index.findNearestNeighborsEncrypted(queryToken));
+        logger.info("Processing query...");
+        result = queryProcessor.processQuery(queryToken, index.findNearestNeighborsEncrypted(queryToken));
         queryCache.put(queryToken, result);
         return decryptEncryptedPoints(result);
     }
 
     public void insert(String id, double[] vector) throws Exception {
+        if (SystemConfig.PROFILER_ENABLED) profiler.start("insert");
+
         long startTime = System.currentTimeMillis();
         operationCount.incrementAndGet();
+
+        // Ensure the vector exists in baseVectors by adding it if not present
+        if (!baseVectors.contains(vector)) {
+            baseVectors.add(vector);
+        }
+
         SecretKey currentKey = keyManager.getSessionKey(keyVersionManager.getTimeVersion());
-        byte[] encryptedVector = EncryptionUtils.encryptVector(vector, currentKey);
-        int index = baseVectors.indexOf(vector);
-        int bucketId = ann.getBucketId(vector);
-        EncryptedPoint encryptedPoint = new EncryptedPoint(encryptedVector, "bucket_v" + bucketId, id, index);
-        encryptedDataStore.put(id, encryptedPoint);
-        int addedFakes = this.index.add(id, vector, true, baseVectors);
+        byte[] encryptedVec = EncryptionUtils.encryptVector(vector, currentKey);
+
+        int vecIndex = baseVectors.indexOf(vector); // Now works because vector is added to baseVectors
+        int bucketId = ann.getBucketId(vector);        // bucketCode == bucketId for now
+
+        EncryptedPoint ep = new EncryptedPoint(encryptedVec, "bucket_v" + bucketId, id, vecIndex);
+        encryptedDataStore.put(id, ep);
+
+        /* use the SecureLSHIndex field explicitly */
+        int addedFakes = this.index.add(id, vector, bucketId, true, baseVectors);
         totalFakePoints += addedFakes;
+
         if (keyVersionManager.needsRotation()) {
             logger.info("[STEP] 🔄 Rotating keys...");
             keyVersionManager.rotateKeys();
@@ -131,11 +147,16 @@ public class ForwardSecureANNSystem {
             operationCount.set(0);
         }
         totalInsertTimeMs += (System.currentTimeMillis() - startTime);
+
+        if (SystemConfig.PROFILER_ENABLED) profiler.stop("insert");
+
+        System.gc();
+
     }
 
     private List<double[]> decryptEncryptedPoints(List<EncryptedPoint> encryptedPoints) throws Exception {
         List<double[]> decryptedVectors = new ArrayList<>();
-        SecretKey currentKey = keyManager.getSessionKey(keyVersionManager.getTimeVersion()); // Use the keyVersionManager to get the current key
+        SecretKey currentKey = keyManager.getSessionKey(keyVersionManager.getTimeVersion());
 
         for (EncryptedPoint point : encryptedPoints) {
             double[] decryptedVector = point.decrypt(currentKey);
@@ -147,6 +168,7 @@ public class ForwardSecureANNSystem {
     public void delete(String id) throws Exception {
         encryptedDataStore.remove(id);
         index.remove(id);
+        logger.info("Deleted point with ID: {}", id);
     }
 
     public void saveIndex(String path) {
@@ -159,6 +181,22 @@ public class ForwardSecureANNSystem {
         }
     }
 
+    public List<double[]> getQueryVectors() {
+        return queryVectors;  // Return the query vectors
+    }
+
+    public List<int[]> getGroundTruth() {
+        return groundTruth;  // Return the ground truth data
+    }
+
+    public List<double[]> getBaseVectors() {
+        return baseVectors;  // Return the base vectors
+    }
+
+    public ANN getANN() {
+        return ann;  // Return the ANN instance
+    }
+
     public void loadIndex(String path) {
         try {
             index.loadIndex(path);
@@ -168,110 +206,65 @@ public class ForwardSecureANNSystem {
         }
     }
 
-    // Added method to resolve 'shutdown' error
     public void shutdown() {
         logger.info("Shutting down ForwardSecureANNSystem...");
-    }
-
-    public List<int[]> getGroundTruth() {
-        return groundTruth;
-    }
-
-    public List<double[]> getBaseVectors() {
-        return baseVectors;
-    }
-
-    public static void main(String[] args) {
+        reEncryptor.shutdown();
         try {
-            // Initialize DataLoader
-            DataLoader dataLoader = new DataLoader();
-            int batchSize = 1000;
+            reEncryptThread.join();
+        } catch (InterruptedException ignored) {
+        }
+    }
+    public static void main(String[] args) {
+        final Logger log = LoggerFactory.getLogger("FSPANN-Main");
+        try {
+            // System bootstrap
+            String basePath = "C:\\Users\\Mehran Memon\\eclipse-workspace\\fspann-query-system\\fspann-query-system\\data\\sift_dataset\\sift\\sift_base.fvecs";
+            String queryPath = "C:\\Users\\Mehran Memon\\eclipse-workspace\\fspann-query-system\\fspann-query-system\\data\\sift_dataset\\sift\\sift_query.fvecs";
+            String groundTruthPath = "C:\\Users\\Mehran Memon\\eclipse-workspace\\fspann-query-system\\fspann-query-system\\data\\sift_dataset\\sift\\sift_groundtruth.ivecs";
 
-            // Define file paths
-            String basePath = "data/sift_dataset/sift/sift_base.fvecs";
-            String queryPath = "data/sift_dataset/sift/sift_query.fvecs";
-            String groundTruthPath = "data/sift_dataset/sift/sift_groundtruth.ivecs";
-
-            // Verify file existence
-            for (String path : new String[]{basePath, queryPath, groundTruthPath}) {
-                File file = new File(path);
-                if (!file.exists() || !file.isFile()) {
-                    logger.error("File not found or invalid: {}", file.getAbsolutePath());
-                    throw new IOException("File not found: " + path);
-                }
-                logger.info("File verified: {}", file.getAbsolutePath());
-            }
-
-            // Initialize system with file paths
-            logger.info("Initializing ForwardSecureANNSystem...");
-            ForwardSecureANNSystem system = new ForwardSecureANNSystem(
+            // Initialize the system
+            ForwardSecureANNSystem sys = new ForwardSecureANNSystem(
                     basePath, queryPath, groundTruthPath,
-                    3, 10, 1000, 1500, true, true
-            );
-            logger.info("System initialized successfully");
+                    3, 10, 1000, 1500, true, true);
 
-            // Check for index backup
-            String backupPath = "data/index_backup";
-            File backupDir = new File(backupPath);
-            if (backupDir.exists() && backupDir.isDirectory()) {
-                logger.info("[STEP] Index backup found at: {}", backupPath);
-            } else {
-                logger.info("[STEP] No index backup found. Rebuilding from scratch...");
+            // Insert 1 million data points
+            log.info("Inserting 1 million data points...");
+            Random rnd = new Random();
+            List<double[]> base = sys.getBaseVectors();
+
+            // Insert 1M data points
+            for (int i = 0; i < 1000000; i++) {
+                double[] vec = base.get(rnd.nextInt(base.size()));
+                sys.insert("dyn_" + i, vec);
+                if (i % 10000 == 0) {
+                    log.info("  ↳ {} records inserted", i + 1);
+                }
             }
 
-            // Run sample query
-            logger.info("[STEP] Running Sample Query...");
-            List<double[]> queryVectors = system.getQueryVectors();
-            if (queryVectors.isEmpty()) {
-                logger.error("No query vectors available to process.");
-                throw new IllegalStateException("Query vectors list is empty");
-            }
-            List<double[]> nearestNeighbors = system.query(queryVectors.get(0), 10);
-            logger.info("Nearest neighbor: {}", Arrays.toString(nearestNeighbors.get(0)));
+            // Perform a sample query with one of the inserted vectors
+            log.info("Performing a sample query...");
+            double[] q0 = sys.getQueryVectors().getFirst(); // Sample query vector
+            sys.query(q0, 10);  // Query top 10 nearest neighbors
 
-            // Evaluate
-            logger.info("[STEP] Evaluating Recall@10 on 100 queries...");
-            EvaluationEngine.evaluate(system, 10, 100, 0);
-            logger.info("[STEP] ✅ Evaluation Complete.");
+            // Delete a random data point (optional)
+            String deleteId = "dyn_" + rnd.nextInt(1000000);
+            log.info("Deleting the data point with ID: {}", deleteId);
+            sys.delete(deleteId);
 
-            // Save index
-            logger.info("[STEP] Saving Index...");
-            if (!backupDir.exists()) {
-                backupDir.mkdirs();
-            }
-            system.saveIndex(backupPath);
+            // Save and load the index
+            log.info("Saving the index...");
+            sys.saveIndex("C:\\Users\\Mehran Memon\\eclipse-workspace\\fspann-query-system\\fspann-query-system\\data\\index_backup");
 
-            // Shutdown
-            logger.info("[STEP] Shutting down...");
-            system.shutdown();
+            log.info("Loading the index...");
+            sys.loadIndex("C:\\Users\\Mehran Memon\\eclipse-workspace\\fspann-query-system\\fspann-query-system\\data\\index_backup");
 
-        } catch (Exception e) {
-            logger.error("❌ Error executing ForwardSecureANNSystem", e);
-            throw new RuntimeException("Execution failed", e);
+            // Shutdown the system gracefully
+            sys.shutdown();
+
+        } catch (Exception ex) {
+            LoggerFactory.getLogger("FSPANN-Main").error("🔥 Fatal error", ex);
+            System.exit(1);
         }
     }
 
-//    public static void main(String[] args) {
-//        DataLoader dataLoader = new DataLoader();
-//        try {
-//            List<double[]> queryVectors = dataLoader.loadData("C:\\Users\\Mehran Memon\\eclipse-workspace\\fspann-query-system\\fspann-query-system\\data\\sift_dataset\\sift\\sift_query.fvecs", 1000);
-//            logger.info("Query vectors loaded: {}", queryVectors.size());
-//            List<int[]> groundTruth = dataLoader.loadGroundTruth("C:\\Users\\Mehran Memon\\eclipse-workspace\\fspann-query-system\\fspann-query-system\\data\\sift_dataset\\sift\\sift_groundtruth.ivecs", 1000);
-//            logger.info("Ground truth entries loaded: {}", groundTruth.size());
-//        } catch (IOException e) {
-//            logger.error("Failed to load data", e);
-//        }
-//    }
-
-    private static ForwardSecureANNSystem getForwardSecureANNSystem() throws IOException {
-        String basePath = "C:\\Users\\Mehran Memon\\eclipse-workspace\\fspann-query-system\\fspann-query-system\\data\\sift_dataset\\sift\\sift_base.fvecs";
-        String queryPath = "C:\\Users\\Mehran Memon\\eclipse-workspace\\fspann-query-system\\fspann-query-system\\data\\sift_dataset\\sift\\sift_query.fvecs";
-        String groundTruthPath = "C:\\Users\\Mehran Memon\\eclipse-workspace\\fspann-query-system\\fspann-query-system\\data\\sift_dataset\\sift\\sift_groundtruth.ivecs";
-
-        return new ForwardSecureANNSystem(
-                basePath, queryPath, groundTruthPath,
-                5, 15, 1000, 1500,
-                true, true
-        );
     }
-}
